Fix port and some stuff